@@ -1,3 +1,8 @@
+2007-08-25  Andy Wingo  <wingo@pobox.com>
+
+	* common.mk (.c.doc): Update so that making .doc files works;
+	still needs some filtering though.
+
 2007-06-15  Andy Wingo  <wingo@pobox.com>
 
 	* == Released guile-gnome-platform version 2.15.93 ==
